# MolecularDynamics

./: #posre.itp.2#  #posre.itp.3#  .gitignore  .gitmodules  .pytest.ini  README.md  conftest.py  mdout.mdp  pyproject.toml
.config/: .env.repo  .env.secret.example  user.gitconfig.example
.github/workflows/: Dockerfile  README.md  test.yaml
pipelines/: md_amber.py  md_with_ligands.py  md_without_ligands.py
results/4Oct2024/: #newbox.gro.1#  #processed.gro.2#  #solvated.gro.1#  #topol.top.1#  #topol.top.10#  #topol.top.11#  #topol.top.5#  #topol.top.6#  #topol.top.7#  #topol.top.8#  #topol.top.9#  ions.tpr  minim.mdp  newbox.gro  npt.mdp  nvt.mdp  solvated.gro  topol.top
results/amber/: #newbox.gro.1#  #processed.gro.10#  #solvated.gro.1#  #topol.top.1#  #topol.top.10#  #topol.top.11#  #topol.top.12#  #topol.top.13#  #topol.top.14#  #topol.top.2#  #topol.top.3#  #topol.top.4#  #topol.top.5#  #topol.top.6#  #topol.top.7#  #topol.top.8#  #topol.top.9#  ions.tpr  minim.mdp  npt.mdp  nvt.mdp  topol.top
test/: test_placeholder.py
